--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     
     <!-- Search Result -->
     <string name="source">Source: </string>
+    <string name="title">Title: </string>
     <string name="description">Description: </string>
     <string name="apply">Apply!</string>
 </resources>
