--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title">Title: </string>
     <string name="description">Description: </string>
     <string name="apply">Apply!</string>
+    <string name="date">Date</string>
 </resources>
