--- a/res/values-small/strings.xml
+++ b/res/values-small/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="yes">Yes</string>
-    <string name="unsure">Unsure</string>
+    <string name="No">No</string>
+    <string name="Unsure">Unsure</string>
+    
 </resources>
