--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,4 +48,19 @@
     <string name="suitability">Suitability</string>
     <string name="reason">Reason</string>
     <string name="comments">Comments</string>
+    <string name="Unsure">Unsure</string>
+    <string name="Yes">Yes</string>
+    <string name="No">No</string>
+    
+    <string-array name="country_arrays">
+        <item>Malaysia</item>
+        <item>United States</item>
+        <item>Indonesia</item>
+        <item>France</item>
+        <item>Italy</item>
+        <item>Singapore</item>
+        <item>New Zealand</item>
+        <item>India</item>
+    </string-array>
+        <string name="submit">Submit</string>
 </resources>
